<resources>
    <string name="app_name">jgc</string>



    <string name="action_settings">Settings</string>
    <string name="audio_selection">Audio selection</string>
    <string name="todo">TODO</string>
    <string name="video_selection">Video selection</string>
    <string name="enter_a_search_term">Enter a search term</string>
    <string name="folder_select">Folder select</string>
    <string name="video_recording">Video recording</string>
    <string name="audio_player">Audio player</string>
    <string name="start_recording">Start recording</string>
    <string name="enter">Enter</string>
    <string name="recoding_name">recoding name</string>
    <string name="no_compression">No compression</string>
    <string name="amr">AMR</string>
    <string name="mp3">MP3</string>
    <string name="compression_options">Compression options</string>
    <string name="jgc_recorder_player"><![CDATA[JGC Recorder & Player]]></string>
    <string name="folder_path">Folder path</string>
    <string name="video_player">video player</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="share">Share</string>
    <string name="video_text">Video Player</string>
    <string name="audio_play">Play</string>
    <string name="audio_record">Record</string>
    <string name="video_play">Play</string>
    <string name="video_record">Record</string>
    <string name="video_startrecord">Start Recording</string>
    <string name="video_endrecord">Done</string>
    <string name="audio_startrecord">Start Recording</string>
    <string name="audio_endrecord">Done</string>
    <string name="video_compression_text">Compression_options</string>
    <string name="video_radioButton">MP4</string>
    <string name="video_radioButton2">AAC</string>
    <string name="video_radioButton3">No compression</string>
    <string name="audio_compression_options">Compression_options</string>
    <string name="audio_player_textView">Audio Player</string>
    <string name="audio_set_recording_name">Set_recording_name</string>
    <string name="video_set_recording_name">Set_recording_name</string>
    <string name="audio_setname_done">Done</string>
    <string name="video_setname_done">Done</string>
    <string name="paused_play">paused_play</string>
    <string name="play_play">play_play</string>
    <string name="done">Done</string>
    <string name="to">TO</string>
</resources>
