<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:contentDescription="@string/todo"
        android:translationY="-170dp"
        app:srcCompat="@drawable/image1" />

    <TextView
        android:id="@+id/audio_player_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/video_selection"
        android:textColor="#c0004fff"
        android:textSize="23sp"
        android:translationY="-170dp" />

    <Button
        android:id="@+id/video_play"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/video_play"
        android:translationY="-120dp" />

    <Button
        android:id="@+id/video_record"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/video_record"
        android:translationY="-100dp" />

</LinearLayout>