<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/audio_player_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/audio_player_textView"
        android:textColor="#c0004fff"
        android:textSize="23sp"
        android:translationY="-40dp" />

    <Button
        android:id="@+id/audio_folder_select"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/folder_select"
        android:translationY="-20dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/audio_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="313dp"
        android:scrollbars="vertical"
        app:layoutManager="LinearLayoutManager" />

    <Button
        android:id="@+id/audio_share"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/share"
        android:translationY="50dp" />

</LinearLayout>