<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/video_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/video_text"
        android:textColor="#c0004fff"
        android:textSize="23sp"
        android:translationY="-100dp" />

    <Button
        android:id="@+id/video_folder_select"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/folder_select"
        android:translationY="-80dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="313dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/item_video_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:layout_weight="1"
            android:textAppearance="?attr/textAppearanceListItem"
            android:translationY="-15dp"></TextView>

        <CheckBox
            android:id="@+id/item_video_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></CheckBox>

    </LinearLayout>

    <Button
        android:id="@+id/video_share"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/share"
        android:translationY="50dp" />

</LinearLayout>